
    HDFS-6663. Admin command to track file and locations from block id.
    (Chen He via kihwal)

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

    HDFS-9184. Logging HDFS operation's caller context into audit logs.
    (Mingliang Liu via jitendra)

    HDFS-4015. Safemode should count and report orphaned blocks.
    (Contributed by Anu Engineer)

  IMPROVEMENTS

    HDFS-8549. Abort the balancer if an upgrade is in progress. (wang)

    HDFS-8818. Changes the global moveExecutor to per datanode executors and
    changes MAX_SIZE_TO_MOVE to be configurable.  (szetszwo)

    HDFS-8824. Do not use small blocks for balancing the cluster.  (szetszwo)

    HDFS-8883. NameNode Metrics : Add FSNameSystem lock Queue Length.
    (Anu Engineer via xyao)

    HDFS-8880. NameNode metrics logging. (Arpit Agarwal)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-7608: hdfs dfsclient newConnectedPeer has no write
    timeout (Xiaoyu Yao via Colin P. McCabe)

    HDFS-7928. Scanning blocks from disk during rolling upgrade startup takes
    a lot of time if disks are busy. Contributed by Rushabh Shah.

    HDFS-7933. fsck should also report decommissioning replicas.
    (Xiaoyu Yao via cnauroth)

    HDFS-8278. When computing max-size-to-move in Balancer, count only the
    storage with remaining >= default block size.  (szetszwo)

    HDFS-8826. In Balancer, add an option to specify the source node list
    so that balancer only selects blocks to move from those nodes.  (szetszwo)

    HDFS-8311. DataStreamer.transfer() should timeout the socket InputStream.
    (Esteban Gutierrez via Yongjun Zhang)

    HDFS-8983. NameNode support for protected directories. (Arpit Agarwal)

    HDFS-8046. Allow better control of getContentSummary (kihwal)

    HDFS-9019. Adding informative message to sticky bit permission denied
    exception. (xyao)

    HDFS-9112. Improve error message for Haadmin when multiple name service IDs